crates/laplace-macro/tests/ui/fail/verify_tasks_threads.stderr
error: unexpected end of input, verify: `threads`, `scenario`, and `tasks` are mutually exclusive
 --> tests/ui/fail/verify_tasks_threads.rs:3:1
  |
3 | #[laplace_macro::laplace_verify(tasks, threads = 2)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `laplace_macro::laplace_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
